--- a/styles/slideshow.less
+++ b/styles/slideshow.less
@@ -44,12 +44,11 @@
 
 @media (min-width: 768px) {
   #slideshow {
-    position: fixed;
-    top: 0;
+    top: 2.25rem;
     right: 0;
-    bottom: 0;
+    bottom: initial;
     left: 0;
-    height: 100%;
+    height: 95vh;
     min-height: 0%;
     margin: 0;
     overflow: hidden;
@@ -58,15 +57,6 @@
     width:100%;
     z-index: -2;
     text-align: center;
-  }
-
-  #slideshow > span {
-    position: relative;
-    top: initial;
-    right: initial;
-    bottom: initial;
-    left: initial;
-    display: block;
   }
 }
 
